@@ -28,7 +28,7 @@ or a stand-alone HTTP server. (Perhaps more in the future or by other parties.)<
 
 <p><img src="overview1.png" align="right" hspace="8" width="397" height="424" />
 An xxm project contains source-files that hold both HTML and Object Pascal source code.
-These are converted (e.g. by the auto-compile feature) into a plain Delphi project,
+These are converted (e.g. by the auto-compile-on-refresh feature) into a plain Delphi project,
 which is compiled into a xxm Library (with the <code>.xxl</code> file extension).
 This xxm Library can be loaded by one of the xxm handlers:</p>
 <ul>
